; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/backlight/extr_lp8788_bl.c_lp8788_get_bl_ctl_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/backlight/extr_lp8788_bl.c_lp8788_get_bl_ctl_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.lp8788_bl = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"PWM based\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"Register based\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"Invalid mode\00", align 1
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @lp8788_get_bl_ctl_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lp8788_get_bl_ctl_mode(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.lp8788_bl*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = call %struct.lp8788_bl* @dev_get_drvdata(%struct.device* %10)
  store %struct.lp8788_bl* %11, %struct.lp8788_bl** %7, align 8
  %12 = load %struct.lp8788_bl*, %struct.lp8788_bl** %7, align 8
  %13 = getelementptr inbounds %struct.lp8788_bl, %struct.lp8788_bl* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i64 @is_brightness_ctrl_by_pwm(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  br label %26

19:                                               ; preds = %3
  %20 = load i32, i32* %8, align 4
  %21 = call i64 @is_brightness_ctrl_by_register(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %9, align 8
  br label %25

24:                                               ; preds = %19
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %9, align 8
  br label %25

25:                                               ; preds = %24, %23
  br label %26

26:                                               ; preds = %25, %18
  %27 = load i8*, i8** %6, align 8
  %28 = load i32, i32* @PAGE_SIZE, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @scnprintf(i8* %27, i32 %28, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %29)
  ret i32 %30
}

declare dso_local %struct.lp8788_bl* @dev_get_drvdata(%struct.device*) #1

declare dso_local i64 @is_brightness_ctrl_by_pwm(i32) #1

declare dso_local i64 @is_brightness_ctrl_by_register(i32) #1

declare dso_local i32 @scnprintf(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
